--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ pkg_resources==0.0.0
 psycopg2-binary==2.9.3
 pycparser==2.21
 pycrypto==2.6.1
+PyJWT==2.4.0
 pymigratedb==1.2.0
 python-dotenv==0.19.2
 PyYAML==6.0
